# obj_detection

./: .gitignore  .gitmodules  COMPLETE_TESTING_READY.md  ENVIRONMENT_SETUP.md  LICENSE  README.md  ROS2_TESTING_SUMMARY.md  demo_testing.py  package.xml  requirements.txt  run_environment.sh  run_tests.py  run_tests_new.py  setup.py  test_dependencies.py  test_summary.md
config/: cluster_config.yaml  detection_config.yaml  lidar_detection_config.yaml  lidar_detection_rviz.rviz  test_config.yaml
karim/: upload_model_label.py
launch/: clustering.launch.py  detection.launch.py  lidar_detection.launch.py  test_lidar_detection.launch.py
lidar_obj_detection/: __init__.py  adaptive_breakpoint.py  core_algorithms.py  detection_node.py  filters.py  frenet_tracking.py  frenet_utils.py  lidar_cluster_modified.py  lidar_cluster_node.py  lidar_filtering.py  lidar_obj_detection_node.py  lidar_sub.py  lidar_sub_modi.py  lidar_subscriber_modifications.py  lidar_subscriber_salma.py  new_object_detector.py  rectangle_fitting.py  test_data_publisher.py  utils.py
test/: test_geometry_detection.py  test_kalman_filter.py  test_object_tracking.py  test_ros2_integration_clean.py
util/: workflow_two_model.py
