<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obj_detection</name>
  <version>1.0.0</version>
  <description>
    A comprehensive ROS2 package for LiDAR-based object detection and clustering 
    designed for F1TENTH autonomous racing applications. Provides multiple algorithms 
    for detecting racing opponents, obstacles, and track boundaries using LiDAR data.
  </description>
  <license>MIT</license>
  <maintainer email="sosototo427@gmail.com">salmatarek</maintainer>
  <author email="sosototo427@gmail.com">Salma Tarek</author>
  <author>Hatem</author>
  <maintainer email="fam@awadlouis.com">Fam Shihata</maintainer>

  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
